@@ -61,6 +61,7 @@ following names for their contribution to the product.
 * Brent G
 * Brianna Laugher
 * Carlin
+* Chris Wrinn
 * church of emacs
 * Daniel Arnold
 * Danny B.
